--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/styles.css">
+  <style>
+/*! tailwindcss v4.0.6 | MIT License | https://tailwindcss.com */
+@layer theme{:root,:host{--animate-spin:spin 1s linear infinite;--animate-ping:ping 1s cubic-bezier(0,0,.2,1)infinite;--animate-pulse:pulse 2s cubic-bezier(.4,0,.6,1)infinite;--animate-bounce:bounce 1s infinite;--breakpoint-400px:400px;--breakpoint-500px:500px;--breakpoint-600px:600px;--breakpoint-700px:700px;--breakpoint-800px:800px;--breakpoint-900px:900px;--breakpoint-1000px:1000px;--breakpoint-1100px:1100px;--breakpoint-1200px:1200px;--breakpoint-1300px:1300px;--breakpoint-1400px:1400px;--breakpoint-1500px:1500px;--breakpoint-1600px:1600px;--breakpoint-1700px:1700px;--breakpoint-1800px:1800px;--breakpoint-1900px:1900px}}@layer base{*,:after,:before,::backdrop{box-sizing:border-box;border:0 solid;margin:0;padding:0}::file-selector-button{box-sizing:border-box;border:0 solid;margin:0;padding:0}html,:host{-webkit-text-size-adjust:100%;tab-size:4;line-height:1.5;font-family:var(--default-font-family,ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji");font-feature-settings:var(--default-font-feature-settings,normal);font-variation-settings:var(--default-font-variation-settings,normal);-webkit-tap-highlight-color:transparent}body{line-height:inherit}hr{height:0;color:inherit;border-top-width:1px}abbr:where([title]){-webkit-text-decoration:underline dotted;text-decoration:underline dotted}h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit}a{color:inherit;-webkit-text-decoration:inherit;-webkit-text-decoration:inherit;-webkit-text-decoration:inherit;text-decoration:inherit}b,strong{font-weight:bolder}code,kbd,samp,pre{font-family:var(--default-mono-font-family,ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace);font-feature-settings:var(--default-mono-font-feature-settings,normal);font-variation-settings:var(--default-mono-font-variation-settings,normal);font-size:1em}small{font-size:80%}sub,sup{vertical-align:baseline;font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}table{text-indent:0;border-color:inherit;border-collapse:collapse}:-moz-focusring{outline:auto}progress{vertical-align:baseline}summary{display:list-item}ol,ul,menu{list-style:none}img,svg,video,canvas,audio,iframe,embed,object{vertical-align:middle;display:block}img,video{max-width:100%;height:auto}button,input,select,optgroup,textarea{font:inherit;font-feature-settings:inherit;font-variation-settings:inherit;letter-spacing:inherit;color:inherit;opacity:1;background-color:#0000;border-radius:0}::file-selector-button{font:inherit;font-feature-settings:inherit;font-variation-settings:inherit;letter-spacing:inherit;color:inherit;opacity:1;background-color:#0000;border-radius:0}:where(select:is([multiple],[size])) optgroup{font-weight:bolder}:where(select:is([multiple],[size])) optgroup option{padding-inline-start:20px}::file-selector-button{margin-inline-end:4px}::placeholder{opacity:1;color:color-mix(in oklab,currentColor 50%,transparent)}textarea{resize:vertical}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-date-and-time-value{min-height:1lh;text-align:inherit}::-webkit-datetime-edit{display:inline-flex}::-webkit-datetime-edit-fields-wrapper{padding:0}::-webkit-datetime-edit{padding-block:0}::-webkit-datetime-edit-year-field{padding-block:0}::-webkit-datetime-edit-month-field{padding-block:0}::-webkit-datetime-edit-day-field{padding-block:0}::-webkit-datetime-edit-hour-field{padding-block:0}::-webkit-datetime-edit-minute-field{padding-block:0}::-webkit-datetime-edit-second-field{padding-block:0}::-webkit-datetime-edit-millisecond-field{padding-block:0}::-webkit-datetime-edit-meridiem-field{padding-block:0}:-moz-ui-invalid{box-shadow:none}button,input:where([type=button],[type=reset],[type=submit]){appearance:button}::file-selector-button{appearance:button}::-webkit-inner-spin-button{height:auto}::-webkit-outer-spin-button{height:auto}[hidden]:where(:not([hidden=until-found])){display:none!important}}@layer components;@layer utilities{.absolute{position:absolute}.fixed{position:fixed}.relative{position:relative}.inset-\[0\]{inset:0}.top-\[24px\]{top:24px}.right-\[24px\]{right:24px}.z-\[1\]{z-index:1}.z-\[20\]{z-index:20}.mx-\[10px\]{margin-inline:10px}.mx-auto{margin-inline:auto}.mb-\[8px\]{margin-bottom:8px}.mb-\[16px\]{margin-bottom:16px}.mb-\[24px\]{margin-bottom:24px}.block{display:block}.flex{display:flex}.grid{display:grid}.hidden{display:none}.table{display:table}.aspect-\[614\/480\]{aspect-ratio:614/480}.aspect-square{aspect-ratio:1}.h-\[48px\]{height:48px}.h-full{height:100%}.min-h-screen{min-height:100vh}.w-4\/5{width:80%}.w-\[6ch\]{width:6ch}.w-\[12px\]{width:12px}.w-\[70px\]{width:70px}.w-\[95\%\]{width:95%}.w-\[150px\]{width:150px}.w-\[200px\]{width:200px}.w-\[24px\]{width:24px}.w-\[50px\]{width:50px}.w-auto{width:auto}.w-full{width:100%}.max-w-\[520px\]{max-width:520px}.max-w-\[700px\]{max-width:700px}.min-w-\[50px\]{min-width:50px}.flex-shrink-\[0\],.shrink-0{flex-shrink:0}.flex-grow,.grow{flex-grow:1}.rotate-\[-1deg\]{rotate:-1deg}.animate-bounce{animation:var(--animate-bounce)}.cursor-pointer{cursor:pointer}.flex-col{flex-direction:column}.place-items-center{place-items:center}.items-center{align-items:center}.items-start{align-items:flex-start}.justify-between{justify-content:space-between}.justify-center{justify-content:center}.gap-\[8px\]{gap:8px}.gap-\[10px\]{gap:10px}.gap-\[12px\]{gap:12px}.gap-\[15px\]{gap:15px}.gap-\[20px\]{gap:20px}.gap-\[30px\]{gap:30px}.overflow-hidden{overflow:hidden}.rounded-\[8px\]{border-radius:8px}.rounded-\[16px\]{border-radius:16px}.rounded-b-\[16px\]{border-bottom-right-radius:16px;border-bottom-left-radius:16px}.border{border-style:var(--tw-border-style);border-width:1px}.border-none{--tw-border-style:none;border-style:none}.border-\[\#00AD00\]{border-color:#00ad00}.border-\[\#bed4da\]{border-color:#bed4da}.bg-\[\#0000004D\]{background-color:#0000004d}.bg-\[\#00971C11\]{background-color:#00971c11}.bg-\[\#F3F7F8\]{background-color:#f3f7f8}.bg-\[\#fff\],.bg-\[rgb\(255\,255\,255\)\]{background-color:#fff}.bg-\[transparent\]{background-color:#0000}.p-\[8px\]{padding:8px}.p-\[16px\]{padding:16px}.p-\[20px\]{padding:20px}.px-\[10px\]{padding-inline:10px}.px-\[12px\]{padding-inline:12px}.px-\[16px\]{padding-inline:16px}.px-\[20px\]{padding-inline:20px}.py-\[8px\]{padding-block:8px}.py-\[30px\]{padding-block:30px}.pt-\[30px\]{padding-top:30px}.pl-\[16px\]{padding-left:16px}.text-center{text-align:center}.text-\[12px\]{font-size:12px}.text-\[13px\]{font-size:13px}.text-\[14px\]{font-size:14px}.text-\[16px\]{font-size:16px}.text-\[18px\]{font-size:18px}.text-\[20px\]{font-size:20px}.text-\[24px\]{font-size:24px}.text-\[28px\]{font-size:28px}.text-\[32px\]{font-size:32px}.leading-\[1\.2\]{--tw-leading:1.2;line-height:1.2}.leading-\[1\.3\]{--tw-leading:1.3;line-height:1.3}.leading-\[1\.4\]{--tw-leading:1.4;line-height:1.4}.leading-\[1\]{--tw-leading:1;line-height:1}.font-\[300\]{--tw-font-weight:300;font-weight:300}.font-\[500\]{--tw-font-weight:500;font-weight:500}.font-\[600\]{--tw-font-weight:600;font-weight:600}.font-\[700\]{--tw-font-weight:700;font-weight:700}.text-\[\#00000099\]{color:#0009}.text-\[\#000000CC\]{color:#000c}.text-\[\#00971C\]{color:#00971c}.text-\[\#48635B\]{color:#48635b}.uppercase{text-transform:uppercase}.opacity-0{opacity:0}.backdrop-blur-\[5px\]{--tw-backdrop-blur:blur(5px);-webkit-backdrop-filter:var(--tw-backdrop-blur,)var(--tw-backdrop-brightness,)var(--tw-backdrop-contrast,)var(--tw-backdrop-grayscale,)var(--tw-backdrop-hue-rotate,)var(--tw-backdrop-invert,)var(--tw-backdrop-opacity,)var(--tw-backdrop-saturate,)var(--tw-backdrop-sepia,);backdrop-filter:var(--tw-backdrop-blur,)var(--tw-backdrop-brightness,)var(--tw-backdrop-contrast,)var(--tw-backdrop-grayscale,)var(--tw-backdrop-hue-rotate,)var(--tw-backdrop-invert,)var(--tw-backdrop-opacity,)var(--tw-backdrop-saturate,)var(--tw-backdrop-sepia,)}.focus\:outline-0:focus{outline-style:var(--tw-outline-style);outline-width:0}@media (width>=800px){.\38 00px\:w-\[28px\]{width:28px}.\38 00px\:w-\[250px\]{width:250px}.\38 00px\:gap-\[16px\]{gap:16px}.\38 00px\:gap-\[20px\]{gap:20px}.\38 00px\:gap-\[40px\]{gap:40px}.\38 00px\:rounded-b-\[20px\]{border-bottom-right-radius:20px;border-bottom-left-radius:20px}.\38 00px\:p-\[40px\]{padding:40px}.\38 00px\:px-\[16px\]{padding-inline:16px}.\38 00px\:py-\[9\.5px\]{padding-block:9.5px}.\38 00px\:py-\[12px\]{padding-block:12px}.\38 00px\:text-\[14px\]{font-size:14px}.\38 00px\:text-\[16px\]{font-size:16px}.\38 00px\:text-\[18px\]{font-size:18px}.\38 00px\:text-\[22px\]{font-size:22px}.\38 00px\:text-\[28px\]{font-size:28px}.\38 00px\:text-\[32px\]{font-size:32px}.\38 00px\:text-\[36px\]{font-size:36px}}@media (width>=1100px){.\31 100px\:mb-\[16px\]{margin-bottom:16px}.\31 100px\:mb-\[24px\]{margin-bottom:24px}.\31 100px\:mb-\[32px\]{margin-bottom:32px}.\31 100px\:flex{display:flex}.\31 100px\:hidden{display:none}.\31 100px\:w-1\/2{width:50%}.\31 100px\:w-\[16px\]{width:16px}.\31 100px\:rounded-\[12px\]{border-radius:12px}.\31 100px\:text-left{text-align:left}.\31 100px\:text-\[16px\]{font-size:16px}}@media (width>=1200px){.\31 200px\:w-\[200px\]{width:200px}.\31 200px\:w-\[300px\]{width:300px}.\31 200px\:w-\[36px\]{width:36px}.\31 200px\:gap-\[20px\]{gap:20px}.\31 200px\:gap-\[30px\]{gap:30px}.\31 200px\:gap-\[50px\]{gap:50px}.\31 200px\:text-\[16px\]{font-size:16px}.\31 200px\:text-\[18px\]{font-size:18px}.\31 200px\:text-\[20px\]{font-size:20px}.\31 200px\:text-\[24px\]{font-size:24px}.\31 200px\:text-\[32px\]{font-size:32px}.\31 200px\:text-\[36px\]{font-size:36px}.\31 200px\:text-\[56px\]{font-size:56px}}.\[1100px\]\:text-\[36px\]:is(){font-size:36px}}body{background-image:url(../img/bg-main@1x.jpg);background-position:100% 0;background-repeat:no-repeat;background-size:cover;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif}@media only screen and (-webkit-device-pixel-ratio>=2),only screen and (min-device-pixel-ratio:2),only screen and (resolution>=192dpi),only screen and (resolution>=2x){body{background-image:url(../img/bg-main@2x.jpg)}}@media only screen and (width<=1100px){body{background-image:url(../img/bg-mobile@1x.jpg);background-position:bottom;background-size:cover}}@media only screen and (-webkit-device-pixel-ratio>=2),only screen and (min-device-pixel-ratio:2),only screen and (resolution>=192dpi),only screen and (resolution>=2x){@media only screen and (width<=1100px){body{background-image:url(../img/bg-mobile@2x.jpg);background-position:bottom}}}.wrapper{width:100%;max-width:1400px;margin-inline:auto;padding-inline:10px}@media (width>=1100px){.wrapper{width:90%}}.wrapper-b{width:100%;max-width:1400px;margin-inline:auto}@media (width>=1100px){.wrapper-b{width:90%}}.main-button{cursor:pointer;cursor:pointer;--tw-font-weight:700;color:#fff;text-transform:uppercase;background:linear-gradient(90deg,#00b430 0%,#00a8bb 100%);border-radius:3.40282e38px;height:70px;font-size:24px;font-weight:700;position:relative;overflow:hidden}@media (width>=800px){.main-button{height:80px;font-size:32px}}@media (width>=1200px){.main-button{height:90px;font-size:40px}}.submit-button{cursor:pointer;cursor:pointer;--tw-font-weight:700;color:#fff;text-transform:uppercase;background:linear-gradient(90deg,#00b430 0%,#00a8bb 100%);border-radius:3.40282e38px;width:100%;height:60px;font-size:24px;font-weight:700;position:relative;overflow:hidden}@media (width>=800px){.submit-button{height:70px;font-size:28px}}@media (width>=1200px){.submit-button{height:70px;font-size:32px}}.main-button:before,.submit-button:before{content:"";background:#ffffff1a;width:200%;height:200%;animation:2s infinite shine;position:absolute;top:-50%;left:-50%;transform:rotate(45deg)}.shadow{box-shadow:0 9px 18px #00000014}.gift-container{cursor:pointer;animation:.5s ease-in-out infinite shake;position:relative}.gift{transition:transform .3s ease-in-out}@keyframes shake{0%,to{transform:rotate(0)}25%{transform:rotate(-5deg)}50%{transform:rotate(5deg)}75%{transform:rotate(-3deg)}}@keyframes pulse{50%{opacity:.5}}@keyframes shine{0%{transform:translate(-100%)rotate(45deg)}to{transform:translate(100%)rotate(45deg)}}@keyframes spin{to{transform:rotate(360deg)}}@keyframes ping{75%,to{opacity:0;transform:scale(2)}}@keyframes bounce{0%,to{animation-timing-function:cubic-bezier(.8,0,1,1);transform:translateY(-25%)}50%{animation-timing-function:cubic-bezier(0,0,.2,1);transform:none}}@property --tw-border-style{syntax:"*";inherits:false;initial-value:solid}@property --tw-leading{syntax:"*";inherits:false}@property --tw-font-weight{syntax:"*";inherits:false}@property --tw-backdrop-blur{syntax:"*";inherits:false}@property --tw-backdrop-brightness{syntax:"*";inherits:false}@property --tw-backdrop-contrast{syntax:"*";inherits:false}@property --tw-backdrop-grayscale{syntax:"*";inherits:false}@property --tw-backdrop-hue-rotate{syntax:"*";inherits:false}@property --tw-backdrop-invert{syntax:"*";inherits:false}@property --tw-backdrop-opacity{syntax:"*";inherits:false}@property --tw-backdrop-saturate{syntax:"*";inherits:false}@property --tw-backdrop-sepia{syntax:"*";inherits:false}@property --tw-outline-style{syntax:"*";inherits:false;initial-value:solid}
+</style>
   <title>Dr. Zebiniso Yadgarova</title>
 </head>
 <body class="main">
@@ -58,7 +61,8 @@
       <div class="px-[10px]">
         <div
           class="max-w-[700px] mx-auto border border-[#00AD00] text-[13px] 800px:text-[16px] 1200px:text-[18px] py-[8px] px-[12px] 800px:py-[12px] 800px:px-[16px] rounded-[8px] leading-[1.4] text-[#000000CC] rotate-[-1deg]">
-          Hech qanday dorilarsiz, Nevromassaj texnikalari yordamida bolalarda uchraydigan 5 ta xavfli kasalliklarning oldini olish va davolash
+          Hech qanday dorilarsiz, Nevromassaj texnikalari yordamida bolalarda uchraydigan 5 ta xavfli kasalliklarning
+          oldini olish va davolash
         </div>
       </div>
 
@@ -75,7 +79,9 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  <span class="font-[500]">Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash</span> usullari
+                  <span
+                    class="font-[500]">Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash</span>
+                  usullari
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -83,7 +89,8 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  <span class="font-[500]">Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish</span> usullari
+                  <span class="font-[500]">Aqliy rivojlanishni tezlashtirish va zehn salohiyatini oshirish</span>
+                  usullari
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -99,7 +106,8 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  <span class="font-[500]">Balerina pozasi</span> (Oyoq uchida bosish) <span class="font-[500]">odatini to‘g‘irlash va davolash</span> usullari
+                  <span class="font-[500]">Balerina pozasi</span> (Oyoq uchida bosish) <span class="font-[500]">odatini to‘g‘irlash va davolash</span>
+                  usullari
                 </p>
               </li>
               <li class="flex items-start gap-[12px]">
@@ -107,13 +115,15 @@
                      alt="">
 
                 <p class="text-[12px] 800px:text-[14px] 1200px:text-[16px] font-[300] text-[#000000CC]">
-                  <span class="font-[500]">Doktorlar</span> ham <span class="font-[500]">aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta</span> haqida batafsil ma'lumot
+                  <span class="font-[500]">Doktorlar</span> ham <span class="font-[500]">aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta</span>
+                  haqida batafsil ma'lumot
                 </p>
               </li>
             </ul>
           </div>
 
-          <img class="h-full w-auto shrink-0" src="img/mentor@1x.png" srcset="img/mentor@1x.png 1x, img/mentor@2x.png 2x" alt="">
+          <img class="h-full w-auto shrink-0" src="img/mentor@1x.png"
+               srcset="img/mentor@1x.png 1x, img/mentor@2x.png 2x" alt="">
         </div>
 
         <div class="flex flex-col gap-[12px] relative px-[10px]">
@@ -142,7 +152,8 @@
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              <span class="font-[500]">Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash</span> usullari
+              <span class="font-[500]">Farzandingizning tengdoshlaridan ko‘ra nutqiy rivojlanishini yaxshilash</span>
+              usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
@@ -163,14 +174,16 @@
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              <span class="font-[500]">Balerina pozasi</span> (Oyoq uchida bosish) <span class="font-[500]">odatini to‘g‘irlash va davolash</span> usullari
+              <span class="font-[500]">Balerina pozasi</span> (Oyoq uchida bosish) <span class="font-[500]">odatini to‘g‘irlash va davolash</span>
+              usullari
             </p>
           </li>
           <li class="flex items-start gap-[12px]">
             <img class="w-[24px] 800px:w-[28px] 1200px:w-[36px] shrink-0 aspect-square" src="img/check.png" alt="">
 
             <p class="text-[14px] 800px:text-[16px] 1200px:text-[20px] font-[300] text-[#000000CC]">
-              <span class="font-[500]">Doktorlar</span> ham <span class="font-[500]">aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta</span> haqida batafsil ma'lumot
+              <span class="font-[500]">Doktorlar</span> ham <span class="font-[500]">aytmagan, bolalarda rivojlanishga ta'sir qiluvchi 11 ta sirli nuqta</span>
+              haqida batafsil ma'lumot
             </p>
           </li>
         </ul>
@@ -242,13 +255,23 @@
 <script src="js/script.js"></script>
 <!-- Meta Pixel Code -->
 <script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
+  !function (f, b, e, v, n, t, s) {
+    if (f.fbq) return;
+    n = f.fbq = function () {
+      n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+    };
+    if (!f._fbq) f._fbq = n;
+    n.push = n;
+    n.loaded = !0;
+    n.version = '2.0';
+    n.queue = [];
+    t = b.createElement(e);
+    t.async = !0;
+    t.src = v;
+    s = b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t, s)
+  }(window, document, 'script',
     'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '1067429025542033');
   fbq('track', 'PageView');
